# statistiques-cfm

./: .gitignore  Cargo.toml  Dioxus.toml  README.md
.github/workflows/: build.yml
configuration/: 2016.yml  2017.yml  2018.yml  2019.yml  2023.yml  2024.yml  2025.yml  events.yml
src/: error.rs  main.rs
src/configuration/: error.rs  events_configuration.rs  events_mapping.rs  mod.rs
src/registration/: convention.rs  event.rs  gender.rs  mod.rs  registrant.rs  test_data.rs
src/statistics/: error.rs  events_registrannts_dependency.rs  events_registrants_dependency.rs  gender_repartition.rs  mod.rs
test/assets/: registrations.xls  wrong_sheet_name.xls
test/assets/configuration/: 2025-wrong-format.yml  2025.yml  events-wrong-format.yml  events.yml
test/assets/registration/: registrations.xls
