[package]
name = "statistiques-cfm"
version = "0.1.0"
authors = ["Maxence Cornaton <22578053+maxence-cornaton@users.noreply.github.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["router", "fullstack"] }
serde = "1.0.219"
calamine = "0.28.0"
derive-getters = "0.5.0"
thiserror = "2.0.12"
plotters = "0.3.7"

[dev-dependencies]
parameterized = "2.0.0"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
